--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+/*use parallax foreground/background for section transitions
+https://stackoverflow.com/questions/42821213/different-scroll-speed-for-each-element
+*/
+
 body {
     font-family: sans-serif;
     font-size: 50px;
     margin: 0px;
+    transform-style: preserve-3d;
+    overflow-x: hidden;
 }
 
 
@@ -25,27 +31,24 @@ text-shadow:
 1px 1px 0 #000;
 }
 
-
 .color1 {
     background-image: linear-gradient(white, #E1E1D7);
     width: 100%;
     padding-bottom: 100px;
-
 }
 
-.section1{
-    margin-top: -75px;
+.section1 {
     background-color: #EEE6D9;
-    background-image: url(img/new3.jpeg);
-    background-size: cover;
+    background-image: url(img/rock.jpeg);
+    background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
     border: none;
-    height: auto;
+    height: 110%;
     width: 100%;
     padding-top: 50px;
-
+    padding-bottom: 50px;
 }
-
 .box {
     border: 2px solid black;
     width: 40%;
@@ -54,20 +57,33 @@ text-shadow:
     margin-bottom: 50px;
     padding: 10px;
     margin-left: 40px;
-    /*box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);*/
-    background-color: #EEE6D9;
+    background-color:  #E1E1D7
 
 }
-
 
 .sticky_element {
     float: right;
     position: sticky;
     top: 0;
-    margin: 20px;
+    width: 40%;
+    display: flex;
+
+}
+
+.words {
+    margin-right: 30%;
+    margin-top: 20px;
     background-color: #EEE6D9;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-right: 5%;
+    padding-left: 5%;
+    text-align: center;
+    margin-bottom: 50px;
     border: 2px solid black;
-    padding:10px;
+    width: auto;
+    height: auto;
+
 
 }
 
@@ -81,8 +97,49 @@ p{
 }
 
 .color2 {
-    background-image: linear-gradient(white, #EEE6D9);
+    background-color: #9fb2ae;
+    background-image: linear-gradient(#9fb2ae, #01050e);
     width: 100%;
-    padding-bottom: 1000px;
+    height: 200px;
+    padding-bottom: 100px;
 
+}
+
+.bigBox{
+    overflow: hidden;
+    position: relative;
+}
+.section2{
+    overflow-x: auto;
+    padding: 20px;
+    color: black;
+    height: 1000px;
+    width: 100%;
+    background-image: url(img/moon2.jpeg);
+    background-position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+    justify-content: space-evenly;
+    display: inline-flex;
+    transform: translate3d(0, 0, 0);
+    z-index: -1;
+}
+
+.box2 {
+   position: relative;
+    z-index: 1;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: whitesmoke;
+    height: 200px;
+    width: 200px;
+    text-align: center;
+    margin-top: 50px;
+
+}
+
+
+#boxB {
+    height: 250px;
+    width: 250px;
 }
