--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
     font-family: sans-serif;
     font-size: 50px;
     margin: 0px;
-    transform-style: preserve-3d;
     overflow-x: hidden;
 }
 
@@ -106,40 +105,103 @@ p{
 }
 
 .bigBox{
+    height: 1000px;
     overflow: hidden;
     position: relative;
 }
 .section2{
-    overflow-x: auto;
-    padding: 20px;
-    color: black;
-    height: 1000px;
+    position: absolute;
+    top: 0;
+    left:0;
     width: 100%;
-    background-image: url(img/moon2.jpeg);
-    background-position: absolute;
-    background-repeat: no-repeat;
+    height: 100%;
+    /*padding: 20px;
+    color: black;
+    height: 1000px;*/
+    background-image:  url(img/moon2.jpeg);
+    /*background-repeat: no-repeat;*/
     background-size: cover;
-    justify-content: space-evenly;
-    display: inline-flex;
+    background-position: center;
     transform: translate3d(0, 0, 0);
     z-index: -1;
 }
 
+.boxes {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: inline-flex;
+    justify-content: space-evenly;
+}
+
 .box2 {
-   position: relative;
-    z-index: 1;
     padding: 20px;
     border-radius: 10px;
     background-color: whitesmoke;
     height: 200px;
     width: 200px;
     text-align: center;
-    margin-top: 50px;
 
 }
 
 
 #boxB {
-    height: 250px;
-    width: 250px;
+    height: 300px;
+    width: 300px;
+    box-shadow: 6px 15px 5px black;
+    z-index: 1.5;
+}
+
+#boxA {
+    box-shadow: 4px 10px 5px black;
+    z-index: 1;
+}
+
+#boxC {
+    box-shadow: 4px 10px 5px black;
+    z-index: 1;
+}
+
+
+.random {
+    background-color: #08142A;
+    height: 700px;
+}
+
+.create {
+    padding-top: 20px;
+    display: inline-flex;
+    height: 1000px;
+    width: 100%;
+    justify-content: space-evenly;
+    overflow-x: hidden;
+}
+
+.col {
+    border: solid 1px black;
+    height: 100%;
+    width: 20%;
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
+}
+
+#specific {
+    font-size: 4em;
+    margin: 10px;
+
+
+    animation-duration: 3s;
+    animation-name: slidein;
+
+    @keyframes slidein {
+        from{}
+        to{}
+
+    }
+}
+
+.colTitle {
+    margin: 0;
+    padding: 0;
 }
