--- a/style.css
+++ b/style.css
@@ -60,12 +60,15 @@ text-shadow:
     border: none;
     margin: none;
     margin-top: 0px;
-    height: 110%;
+    height: 100%;
     width: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
 }
 .box {
+    margin-top: 0px;
+    display: flex;
+    flex-direction: column;
     border: 2px solid black;
     width: 40%;
     height: 100%;
@@ -73,35 +76,59 @@ text-shadow:
     margin-bottom: 50px;
     padding: 10px;
     margin-left: 40px;
-    background-color: white
-    /* #E1E1D7 */
-
+    background-color: white;
 }
 
-.sticky_element {
-    float: right;
-    position: sticky;
-    top: 0;
+.profile {
     width: 40%;
     display: flex;
+    position: relative;
+    border-radius: 5px;
+}
+.words {
+    float: right;
+    top: 0px;
+    position: sticky;
+    margin-right: 20px;
+    margin-top: 0px;
+    width: 50%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
 
 }
 
-.words {
-    margin-right: 30%;
+
+.words2 {
     margin-top: 20px;
-    background-color:white; /* #EEE6D9;*/
-    padding-top: 10%;
-    padding-bottom: 10%;
-    padding-right: 5%;
-    padding-left: 5%;
-    text-align: center;
     margin-bottom: 50px;
+    background-color:white;
     border: 2px solid black;
-    width: auto;
-    height: auto;
+    width: 80%;
+    display: flex;
+    padding: 20px;
 
 
+
+}
+.actual {
+    padding-left: 20px;
+    display: flex;
+align-items: center;
+}
+
+.list_p {
+    margin: 8px;
+    font-weight: 100;
+}
+
+.list_h3 {
+    margin-bottom: 15px;
+}
+
+.h5style {
+    font-size: 35px;
+    margin: 0px;
 }
 
 h3 {
@@ -215,7 +242,7 @@ p{
     justify-content: space-evenly;
     overflow-x: hidden;
     text-align: left;
-    background-color:white;
+    background-color: white;
     top: 0;
     left: 0;
     background-position: absolute;
@@ -309,7 +336,8 @@ a:hover {
     height: 100%;
     display: flex;
     justify-content: center;
-    background-color: white;
+    background-color: #fdab9f;
+
     }
 
 
